k8s/platform/minio/manifests/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minio
  labels:
    name: minio
    app.kubernetes.io/name: minio
    app.kubernetes.io/component: storage
